@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXMenu.c,v 1.21 2005/11/27 02:36:15 das Exp $
+ * RCS: @(#) $Id: tkMacOSXMenu.c,v 1.22 2005/11/27 06:37:31 das Exp $
  */
 #include "tkMacOSXInt.h"
 #include "tkMenubutton.h"
@@ -17,6 +17,12 @@
 #include "tkColor.h"
 #include "tkMacOSXInt.h"
 #undef Status
+
+#if !defined(MAC_OS_X_VERSION_10_3) || \
+        (MAC_OS_X_VERSION_MAX_ALLOWED < MAC_OS_X_VERSION_10_3)
+    /* Define constants only available on Mac OS X 10.3 or later */
+    #define kMenuAttrDoNotUseUserCommandKeys = (1 << 7)
+#endif
 
 #define USE_TK_MDEF
 //#define USE_ATSU
